k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accubooks-prod
  labels:
    name: accubooks-prod
    environment: production
